Red background and blurry white text.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
   <title>badssl.com</title>
   <style>
+    html {
+      background: red;
+    }
     h1 {
-      color: red;
+      color: white;
       text-align: center;
       font-family: Source Code Pro, monospace, Impact;
       font-size: 8em;
+      text-shadow:
+        0 0 20px rgba(255, 255, 255, 0.5),
+        0 0 40px rgba(255, 255, 255, 0.5),
+        0 0 60px rgba(255, 255, 255, 0.5);
     }
   </style>
 </head>
