--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
   <title>badssl.com</title>
   <style>
-    html {
+    html, body {
       background: red;
+
+      height: 100%;
+      display: -webkit-flexbox;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     h1 {
       color: white;
       text-align: center;
-      font-family: Source Code Pro, monospace, Impact;
-      font-size: 8em;
+      font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
+      font-size: 5em;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
