--- a/domains/rc4.badssl.com/index.html
+++ b/domains/rc4.badssl.com/index.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <title>badssl.com</title>
+  <title>rc4.badssl.com</title>
   <style>
     html, body {
-      background: red;
+      background: gray;
 
       height: 100%;
       display: -webkit-flexbox;
       display: -ms-flexbox;
       display: -webkit-flex;
       display: flex;
+      -webkit-align-items: center;
       align-items: center;
+      -webkit-justify-content: center;
       justify-content: center;
     }
     h1 {
@@ -19,6 +21,7 @@
       text-align: center;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
+      font-size: 10vw;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
@@ -27,6 +30,6 @@
   </style>
 </head>
 <body>
-    <h1>BADSSL.COM</h1>
+    <h1>rc4.badssl.com</h1>
 </body>
 </html>
