--- a/domains/sha1-2016.badssl.com/index.html
+++ b/domains/sha1-2016.badssl.com/index.html
@@ -6,6 +6,8 @@
     html, body {
       background: rgb(246, 207, 47);
 
+      margin: 0;
+      padding: 0;
       height: 100%;
       display: -webkit-flexbox;
       display: -ms-flexbox;
