--- a/domains/expired.badssl.com/index.html
+++ b/domains/expired.badssl.com/index.html
@@ -6,6 +6,9 @@
     html, body {
       background: red;
 
+      margin: 0;
+      padding: 0;
+
       height: 100%;
       display: -webkit-flexbox;
       display: -ms-flexbox;
