Improve the responsive layout of help.badssl.com.

--- a/domains/help.badssl.com/index.html
+++ b/domains/help.badssl.com/index.html
@@ -28,11 +28,12 @@
       font-size: 5em;
       font-size: 5vw;
       display: block;
-      padding: 0.1em 0.5em 0.1em 0em;
+      padding: 2.5vh 7vw 2.5vh 0vw;
       margin: 2vh 0em;
       width: 100%;
       box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
       transition: all 150ms;
+      font-weight: bold;
     }
     .links a:hover {
       text-decoration: underline;
