Tweak help.badssl.com and add blue background/favicon.

--- a/domains/help.badssl.com/index.html
+++ b/domains/help.badssl.com/index.html
@@ -4,6 +4,7 @@
   <title>help.badssl.com</title>
   <style>
     html, body {
+      background: rgb(77, 149, 218);
 
       margin: 0;
       padding: 0;
@@ -26,7 +27,7 @@
       color: white;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
-      font-size: 5vh;
+      font-size: 4vh;
       display: block;
       padding: 2.5vh 7vw 2.5vh 0vw;
       margin: 2vh 0em;
@@ -37,7 +38,7 @@
     }
     @media (max-width: 600px) {
       .links a {
-          font-size: 3vh;
+          font-size: 3vw;
       }
     }
     .links a:hover {
