Use dark font on yellow (dubious) background for help page.

--- a/domains/help.badssl.com/index.html
+++ b/domains/help.badssl.com/index.html
@@ -60,6 +60,15 @@
     .dubious {
       background: rgb(246, 207, 47);
     }
+    .links a.dubious {
+      color: #222;
+    }
+    .links a.dubious:hover {
+      text-shadow:
+        0 0 20px rgba(150, 100, 0, 0.15),
+        0 0 40px rgba(150, 100, 0, 0.15),
+        0 0 60px rgba(150, 100, 0, 0.15);
+    }
     .bad {
       background: red;
     }
