--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -4,7 +4,7 @@
   <title>badssl.com</title>
   <style>
     html, body {
-      background: red;
+      background: rgb(77, 149, 218);
 
       margin: 0;
       padding: 0;
@@ -19,20 +19,228 @@
       -webkit-justify-content: center;
       justify-content: center;
     }
-    h1 {
+    div {
+      text-align: right;
+    }
+    .links a {
+      text-decoration: none;
       color: white;
-      text-align: center;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
-      font-size: 10vw;
+      font-size: 4vh;
+      display: block;
+      padding: 2.5vh 7vw 2.5vh 0vw;
+      margin: 2vh 0em;
+      width: 100%;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+      transition: all 150ms;
+      font-weight: bold;
+    }
+    @media (max-width: 600px) {
+      .links a {
+          font-size: 3vw;
+      }
+    }
+    .links a:hover {
+      text-decoration: underline;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      transform: translateY(-2px);
+    }
+    .github {
+      background: rgba(0, 0, 0, 0.2);
+      color: black;
+      text-align: center;
+      margin-top: 6vh;
+      font-family: Helvetica, sans-serif;
+    }
+    .dubious {
+      background: rgb(246, 207, 47);
+    }
+    .links a.dubious {
+      color: #222;
+    }
+    .links a.dubious:hover {
+      text-shadow:
+        0 0 20px rgba(150, 100, 0, 0.15),
+        0 0 40px rgba(150, 100, 0, 0.15),
+        0 0 60px rgba(150, 100, 0, 0.15);
+    }
+    .bad {
+      background: red;
+    }
+    .neutral {
+      background: gray;
     }
   </style>
 </head>
 <body>
-    <h1>BADSSL.COM</h1>
+
+  <div class="links">
+    <a href="https://self-signed.badssl.com/" class="bad">self-signed.badssl.com</a>
+    <a href="https://wrong.host.badssl.com/" class="bad">wrong.host.badssl.com</a>
+    <a href="https://expired.badssl.com/" class="bad">expired.badssl.com</a>
+    <a href="https://sha1.badssl.com/" class="dubious">sha1.badssl.com</a>
+    <a href="https://mixed.badssl.com/" class="dubious">mixed.badssl.com</a>
+    <a href="https://rc4.badssl.com/" class="neutral">rc4.badssl.com</a>
+    <a href="https://cbc.badssl.com/" class="neutral">cbc.badssl.com</a>
+  </div>
+
+  <!-- Start of GitHub ribbon. -->
+
+  <div class="github-fork-ribbon-wrapper right">
+      <div class="github-fork-ribbon">
+          <a href="https://github.com/lgarron/badssl.com">Fork me on GitHub</a>
+      </div>
+  </div>
+
+  <style>
+  /*!
+   * "Fork me on GitHub" CSS ribbon v0.1.1 | MIT License
+   * https://github.com/simonwhitaker/github-fork-ribbon-css
+  */
+
+  /* Left will inherit from right (so we don't need to duplicate code) */
+  .github-fork-ribbon {
+    /* The right and left classes determine the side we attach our banner to */
+    position: absolute;
+
+    /* Add a bit of padding to give some substance outside the "stitching" */
+    padding: 2px 0;
+
+    /* Set the base colour */
+    background-color: black;
+
+    /* Set a gradient: transparent black at the top to almost-transparent black at the bottom */
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.15)));
+    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
+    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
+    background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
+    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
+
+    /* Add a drop shadow */
+    -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.5);
+
+    /* Set the font */
+    font: 700 13px "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+    z-index: 9999;
+    pointer-events: auto;
+  }
+
+  .github-fork-ribbon a,
+  .github-fork-ribbon a:hover {
+    /* Set the text properties */
+    color: #fff;
+    text-decoration: none;
+    text-shadow: 0 -1px rgba(0, 0, 0, 0.5);
+    text-align: center;
+
+    /* Set the geometry. If you fiddle with these you'll also need
+       to tweak the top and right values in .github-fork-ribbon. */
+    width: 200px;
+    line-height: 20px;
+
+    /* Set the layout properties */
+    display: inline-block;
+    padding: 2px 0;
+
+    /* Add "stitching" effect */
+    border-width: 1px 0;
+    border-style: dotted;
+    border-color: #fff;
+    border-color: rgba(255, 255, 255, 0.7);
+  }
+
+  .github-fork-ribbon-wrapper {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    z-index: 9999;
+    pointer-events: none;
+  }
+
+  .github-fork-ribbon-wrapper.fixed {
+    position: fixed;
+  }
+
+  .github-fork-ribbon-wrapper.left {
+    left: 0;
+  }
+
+  .github-fork-ribbon-wrapper.right {
+    right: 0;
+  }
+
+  .github-fork-ribbon-wrapper.left-bottom {
+    position: fixed;
+    top: inherit;
+    bottom: 0;
+    left: 0;
+  }
+
+  .github-fork-ribbon-wrapper.right-bottom {
+    position: fixed;
+    top: inherit;
+    bottom: 0;
+    right: 0;
+  }
+
+  .github-fork-ribbon-wrapper.right .github-fork-ribbon {
+    top: 42px;
+    right: -43px;
+
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .github-fork-ribbon-wrapper.left .github-fork-ribbon {
+    top: 42px;
+    left: -43px;
+
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+
+  .github-fork-ribbon-wrapper.left-bottom .github-fork-ribbon {
+    top: 80px;
+    left: -43px;
+
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .github-fork-ribbon-wrapper.right-bottom .github-fork-ribbon {
+    top: 80px;
+    right: -43px;
+
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  </style>
+
+  <!-- End of GitHub ribbon. -->
+
 </body>
 </html>
