--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -86,6 +86,10 @@
     .neutral {
       background: gray;
     }
+    .orange {
+      color: #222;
+      background: rgb(243, 121, 46);
+    }
   </style>
 </head>
 <body>
@@ -94,6 +98,7 @@
     <a href="https://self-signed.badssl.com/" class="bad">self-signed.badssl.com</a>
     <a href="https://wrong.host.badssl.com/" class="bad">wrong.host.badssl.com</a>
     <a href="https://expired.badssl.com/" class="bad">expired.badssl.com</a>
+    <a href="https://incomplete-chain.badssl.com/" class="orange">incomplete-chain.badssl.com</a>
     <a href="https://sha1.badssl.com/" class="dubious">sha1.badssl.com</a>
     <a href="https://mixed.badssl.com/" class="dubious">mixed.badssl.com</a>
     <a href="https://rc4.badssl.com/" class="neutral">rc4.badssl.com</a>
