Fix title for preloaded-hsts.badssl.com.

--- a/domains/preloaded-hsts.badssl.com/index.html
+++ b/domains/preloaded-hsts.badssl.com/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>hsts.badssl.com</title>
+  <title>preloaded-hsts.badssl.com</title>
   <style>
     html, body {
       background: green;
