Add a note to preloaded-hsts about being preloaded in Chrome 44.

--- a/domains/preloaded-hsts.badssl.com/index.html
+++ b/domains/preloaded-hsts.badssl.com/index.html
@@ -30,9 +30,23 @@
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
+    .extra {
+      margin-top: 2em;
+      font-size: 40%;
+      text-shadow: none;
+    }
+    a {
+      color: white;
+    }
+    a:hover {
+      text-shadow:
+        0 0 20px rgba(255, 255, 255, 0.5),
+        0 0 40px rgba(255, 255, 255, 0.5),
+        0 0 60px rgba(255, 255, 255, 0.5);
+    }
   </style>
 </head>
 <body>
-    <h1>preloaded-hsts.<br>badssl.com</h1>
+    <h1>preloaded-hsts.<br>badssl.com<div class="extra">(Preloaded in <a href="https://omahaproxy.appspot.com/">Chrome 44</a>.)</div></h1>
 </body>
 </html>
