--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -20,7 +20,7 @@
       justify-content: center;
     }
     div {
-      text-align: right;
+      text-align: center;
     }
     .links {
       padding: 0 3vw 0 3vw;
@@ -32,8 +32,8 @@
       font-size: 5em;
       font-size: 4vh;
       display: block;
-      padding: 1vh 3vw 1vh 3vw;
-      margin: 1.5vh -3vw;
+      padding: 1vh 10vw 1vh 10vw;
+      margin: 1.5vh -10vw;
       width: 100%;
       box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
       transition: all 150ms;
@@ -95,16 +95,16 @@
 <body>
 
   <div class="links">
-    <a href="https://self-signed.badssl.com/" class="bad">self-signed.badssl.com</a>
-    <a href="https://wrong.host.badssl.com/" class="bad">wrong.host.badssl.com</a>
-    <a href="https://expired.badssl.com/" class="bad">expired.badssl.com</a>
-    <a href="https://incomplete-chain.badssl.com/" class="orange">incomplete-chain.badssl.com</a>
-    <a href="https://sha1.badssl.com/" class="dubious">sha1.badssl.com</a>
-    <a href="https://mixed.badssl.com/" class="dubious">mixed.badssl.com</a>
-    <a href="https://rc4.badssl.com/" class="neutral">rc4.badssl.com</a>
-    <a href="https://cbc.badssl.com/" class="neutral">cbc.badssl.com</a>
-    <a href="https://hsts.badssl.com/" class="good">hsts.badssl.com</a>
-    <a href="https://preloaded-hsts.badssl.com/" class="good">preloaded-hsts.badssl.com</a>
+    <a href="https://self-signed.badssl.com/" class="bad">self-signed</a>
+    <a href="https://wrong.host.badssl.com/" class="bad">wrong.host</a>
+    <a href="https://expired.badssl.com/" class="bad">expired</a>
+    <a href="https://incomplete-chain.badssl.com/" class="orange">incomplete-chain</a>
+    <a href="https://sha1.badssl.com/" class="dubious">sha1</a>
+    <a href="https://mixed.badssl.com/" class="dubious">mixed</a>
+    <a href="https://rc4.badssl.com/" class="neutral">rc4</a>
+    <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
+    <a href="https://hsts.badssl.com/" class="good">hsts</a>
+    <a href="https://preloaded-hsts.badssl.com/" class="good">preloaded-hsts</a>
   </div>
 
   <!-- Start of GitHub ribbon. -->
