--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -135,6 +135,7 @@
     <a href="https://mixed.badssl.com/" class="dubious">mixed</a>
     <a href="https://rc4.badssl.com/" class="neutral">rc4</a>
     <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
+    <!--a href="https://sha256.badssl.com/" class="good">sha256</a-->
     <a href="https://hsts.badssl.com/" class="good">hsts</a>
     <a href="https://preloaded-hsts.badssl.com/" class="good">preloaded-hsts</a>
     <div id="ua"></div>
