Front page: Also exhibit the hover effect on keyboard focus.

--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -55,7 +55,7 @@
           font-size: 5vw;
       }
     }
-    .links a:hover {
+    .links a:hover, .links a:focus {
       text-decoration: underline;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
