Fix two page titles.

--- a/domains/incomplete-chain.badssl.com/index.html
+++ b/domains/incomplete-chain.badssl.com/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>self-signed.badssl.com</title>
+  <title>incomplete-chain.badssl.com</title>
   <style>
     html, body {
       background: rgb(243, 121, 46);
