--- a/domains/wrong.host.badssl.com/index.html
+++ b/domains/wrong.host.badssl.com/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>self-signed.badssl.com</title>
+  <title>wrong.host.badssl.com</title>
   <style>
     html, body {
       background: red;
