Explain SHA-1 certs on SHA-1 subdomains.

--- a/domains/sha1.badssl.com/index.html
+++ b/domains/sha1.badssl.com/index.html
@@ -30,9 +30,19 @@
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
+    .extra {
+      margin-top: 2em;
+      font-size: 3.5vw;
+      text-shadow: none;
+      margin: 1em;
+      padding: 1em 2em;
+      background: rgba(0, 0, 0, 0.25);
+      box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+      border-radius: 0.5em;
+    }
   </style>
 </head>
 <body>
-    <h1>sha1.badssl.com</h1>
+    <h1>sha1.badssl.com<div class="extra">The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2016.</div></h1>
 </body>
 </html>
