Add HSTS test. Addresses #13.

--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -74,6 +74,9 @@
     .good {
       background: green;
     }
+    .goodish {
+      background: #484;
+    }
     .dubious {
       background: rgb(246, 207, 47);
     }
@@ -136,8 +139,8 @@
     <a href="https://rc4.badssl.com/" class="neutral">rc4</a>
     <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
     <!--a href="https://sha256.badssl.com/" class="good">sha256</a-->
-    <a href="https://hsts.badssl.com/" class="good">hsts</a>
-    <a href="https://preloaded-hsts.badssl.com/" class="good">preloaded-hsts</a>
+    <a href="https://hsts.badssl.com/" class="goodish">hsts</a>
+    <a href="https://preloaded-hsts.badssl.com/" class="goodish">preloaded-hsts</a>
     <div id="ua"></div>
   </div>
 
