--- a/domains/hsts.badssl.com-https/index.html
+++ b/domains/hsts.badssl.com-https/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <title>sha1.badssl.com</title>
+  <title>hsts.badssl.com</title>
   <style>
     html, body {
-      background: rgb(246, 207, 47);
+      background: #484;
 
       margin: 0;
       padding: 0;
@@ -24,7 +24,7 @@
       text-align: center;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
-      font-size: 10vw;
+      font-size: 9vw;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
@@ -42,12 +42,16 @@
       font-family: Helvetica, Tahoma, sans-serif;
       text-align: center;
       color: white;
-      font-size: 3vw;
+      font-size: 6vw;
+    }
+    #http-vs-https {
+      height: 1.2em;
+      vertical-align: middle;
     }
   </style>
 </head>
 <body>
-    <h1>sha1.badssl.com</h1>
-    <div class="footer">The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2016.</div>
+    <h1>hsts.badssl.com</h1>
+    <div class="footer"><img id="http-vs-https" src="http://hsts.badssl.com/hsts-test/status.svg" title="This is an image with an HTTP source location specified. If HSTS is working, the source should be rewritten to HTTPS. The image will vary depending on the outcome."></div>
 </body>
 </html>
