--- a/domains/preloaded-hsts.badssl.com-http/index.html
+++ b/domains/preloaded-hsts.badssl.com-http/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <title>sha1.badssl.com</title>
+  <title>preloaded-hsts.badssl.com</title>
   <style>
     html, body {
-      background: rgb(246, 207, 47);
+      background: #A44;
 
       margin: 0;
       padding: 0;
@@ -24,30 +24,15 @@
       text-align: center;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
-      font-size: 10vw;
+      font-size: 9vw;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
-    .footer {
-      background: rgba(0, 0, 0, 0.25);
-      
-      position: fixed;
-      width: 80vw;
-      bottom: 0;
-      left: 0;
-      padding: 2vh 10vw;
-
-      font-family: Helvetica, Tahoma, sans-serif;
-      text-align: center;
-      color: white;
-      font-size: 3vw;
-    }
   </style>
 </head>
 <body>
-    <h1>sha1.badssl.com</h1>
-    <div class="footer">The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2016.</div>
+    <h1>preloaded-hsts.<br>badssl.com</h1>
 </body>
 </html>
