--- a/domains/preloaded-hsts.badssl.com-https/index.html
+++ b/domains/preloaded-hsts.badssl.com-https/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <title>preloaded-hsts.badssl.com</title>
+  <title>hsts.badssl.com</title>
   <style>
     html, body {
-      background: green;
+      background: #484;
 
       margin: 0;
       padding: 0;
@@ -30,23 +30,28 @@
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
-    .extra {
-      margin-top: 2em;
-      font-size: 40%;
-      text-shadow: none;
-    }
-    a {
+    .footer {
+      background: rgba(0, 0, 0, 0.25);
+      
+      position: fixed;
+      width: 80vw;
+      bottom: 0;
+      left: 0;
+      padding: 2vh 10vw;
+
+      font-family: Helvetica, Tahoma, sans-serif;
+      text-align: center;
       color: white;
+      font-size: 3vw;
     }
-    a:hover {
-      text-shadow:
-        0 0 20px rgba(255, 255, 255, 0.5),
-        0 0 40px rgba(255, 255, 255, 0.5),
-        0 0 60px rgba(255, 255, 255, 0.5);
+    #http-vs-https {
+      height: 1.5em;
+      vertical-align: middle;
     }
   </style>
 </head>
 <body>
-    <h1>preloaded-hsts.<br>badssl.com<div class="extra">Preloaded in <a href="https://omahaproxy.appspot.com/">Chrome 44</a> (Dev).</div></h1>
+    <h1>preloaded-hsts.<br>badssl.com</h1>
+    <div class="footer"><img id="http-vs-https" src="http://hsts.badssl.com/hsts-test/status.svg" title="This is an image with an HTTP source location specified. If HSTS is working, the source should be rewritten to HTTPS. The image will vary depending on the outcome."><br>Preloaded in: Chrome 44, Firefox 41</div>
 </body>
 </html>
