--- a/domains/dh480.badssl.com/index.html
+++ b/domains/dh480.badssl.com/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>broken-diffie-hellman.badssl.com</title>
+  <title>dh480.badssl.com</title>
   <style>
     html, body {
       background: red;
@@ -24,15 +24,30 @@
       text-align: center;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
-      font-size: 12vw;
+      font-size: 9vw;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
+    .footer {
+      background: rgba(0, 0, 0, 0.25);
+      
+      position: fixed;
+      width: 80vw;
+      bottom: 0;
+      left: 0;
+      padding: 2vh 10vw;
+
+      font-family: Helvetica, Tahoma, sans-serif;
+      text-align: center;
+      color: white;
+      font-size: 3vw;
+    }
   </style>
 </head>
 <body>
-    <h1>broken-diffie-hellman.<br>badssl.com</h1>
+    <h1>dh480.badssl.com</h1>
+    <div class="footer">This site uses an ephemeral Diffie-Hellman key exchange over a 480-bit group.</div>
 </body>
 </html>
