Make SHA-1 sites consistent.

--- a/domains/sha1-2016.badssl.com/index.html
+++ b/domains/sha1-2016.badssl.com/index.html
@@ -29,19 +29,24 @@
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
-    .extra {
-      margin-top: 2em;
-      font-size: 3.5vw;
-      text-shadow: none;
-      margin: 1em;
-      padding: 1em 2em;
+    .footer {
       background: rgba(0, 0, 0, 0.25);
-      box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
-      border-radius: 0.5em;
+      
+      position: fixed;
+      width: 80vw;
+      bottom: 0;
+      left: 0;
+      padding: 2vh 10vw;
+
+      font-family: Helvetica, Tahoma, sans-serif;
+      text-align: center;
+      color: white;
+      font-size: 3vw;
     }
   </style>
 </head>
 <body>
-    <h1>sha1-2016.<br>badssl.com<div class="extra">The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2016.</div></h1>
+    <h1>sha1-2016.<br>badssl.com</h1>
+    <div class="footer">The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2016.</div>
 </body>
 </html>
