--- a/domains/sha1-2017.badssl.com/index.html
+++ b/domains/sha1-2017.badssl.com/index.html
@@ -29,9 +29,24 @@
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
+    .footer {
+      background: rgba(0, 0, 0, 0.25);
+      
+      position: fixed;
+      width: 80vw;
+      bottom: 0;
+      left: 0;
+      padding: 2vh 10vw;
+
+      font-family: Helvetica, Tahoma, sans-serif;
+      text-align: center;
+      color: white;
+      font-size: 3vw;
+    }
   </style>
 </head>
 <body>
     <h1>sha1-2017.<br>badssl.com</h1>
+    <div class="footer">The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2017.</div>
 </body>
 </html>
