Move favicons into common folder. Fixes issue #3.

--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-blue.ico"/>
+  <link rel="apple-touch-icon" href="/icon-blue.png"/>
   <style>
     html, body {
       background: rgb(77, 149, 218);
