--- a/domains/incomplete-chain.badssl.com/index.html
+++ b/domains/incomplete-chain.badssl.com/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>incomplete-chain.badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-orange.ico"/>
+  <link rel="apple-touch-icon" href="/icon-orange.png"/>
   <style>
     html, body {
       background: rgb(243, 121, 46);
