--- a/domains/sha1-2017.badssl.com/index.html
+++ b/domains/sha1-2017.badssl.com/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>sha1-2017.badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-red.ico"/>
+  <link rel="apple-touch-icon" href="/icon-red.png"/>
   <style>
     html, body {
       background: rgb(246, 207, 47);
