--- a/domains/sha256.badssl.com/index.html
+++ b/domains/sha256.badssl.com/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>sha256.badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-green.ico"/>
+  <link rel="apple-touch-icon" href="/icon-green.png"/>
   <style>
     html, body {
       background: green;
