--- a/domains/rc4.badssl.com/index.html
+++ b/domains/rc4.badssl.com/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>rc4.badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-gray.ico"/>
+  <link rel="apple-touch-icon" href="/icon-gray.png"/>
   <style>
     html, body {
       background: gray;
