--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -154,6 +154,7 @@
     <a href="https://hsts.badssl.com/" class="goodish">hsts</a>
     <a href="https://preloaded-hsts.badssl.com/" class="goodish">preloaded-hsts</a>
     <a id="reveal-more">More...</a>
+    <a href="https://subdomain.preloaded-hsts.badssl.com/" class="more bad">subdomain.<br>preloaded-hsts</a>
     <a href="https://dh480.badssl.com/" class="more bad">dh480</a>
     <a href="https://dh512.badssl.com/" class="more bad">dh512</a>
     <a href="https://sha256.badssl.com/" class="more good">sha256</a>
