--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -146,18 +146,18 @@
     <a href="https://expired.badssl.com/" class="bad">expired</a>
     <a href="https://wrong.host.badssl.com/" class="bad">wrong.host</a>
     <a href="https://self-signed.badssl.com/" class="bad">self-signed</a>
-    <a href="https://incomplete-chain.badssl.com/" class="orange">incomplete-chain</a>
     <a href="https://sha1.badssl.com/" class="dubious">sha1</a>
     <a href="https://mixed.badssl.com/" class="dubious">mixed</a>
     <a href="https://rc4.badssl.com/" class="neutral">rc4</a>
     <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
-    <a href="https://hsts.badssl.com/" class="goodish">hsts</a>
-    <a href="https://preloaded-hsts.badssl.com/" class="goodish">preloaded-hsts</a>
     <a id="reveal-more">More...</a>
+    <a href="https://sha256.badssl.com/" class="more good">sha256</a>
+    <a href="https://hsts.badssl.com/" class="more goodish">hsts</a>
+    <a href="https://preloaded-hsts.badssl.com/" class="more goodish">preloaded-hsts</a>
     <a href="https://subdomain.preloaded-hsts.badssl.com/" class="more bad">subdomain.<br>preloaded-hsts</a>
     <a href="https://dh480.badssl.com/" class="more bad">dh480</a>
     <a href="https://dh512.badssl.com/" class="more bad">dh512</a>
-    <a href="https://sha256.badssl.com/" class="more good">sha256</a>
+    <a href="https://incomplete-chain.badssl.com/" class="more orange">incomplete-chain</a>
     <div id="ua"></div>
   </div>
 
