Give the UA div more padding, to avoid wrapping.

--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -39,6 +39,7 @@
     }
     #links #ua {
       margin-top: 3vh;
+      padding: 0.75vh 0vh;
     }
     @media (min-height: 1000px) {
       #links a, #links #ua {
