Add http.badssl.com to the front page.

--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -161,6 +161,7 @@
     <a href="https://dh512.badssl.com/" class="more bad">dh512</a>
     <a href="https://incomplete-chain.badssl.com/" class="more orange">incomplete-chain</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
+    <a href="https://rc4-md5.badssl.com/" class="more neutral">http</a>
     <div id="ua"></div>
   </div>
 
