--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -160,6 +160,7 @@
     <a href="https://dh480.badssl.com/" class="more bad">dh480</a>
     <a href="https://dh512.badssl.com/" class="more bad">dh512</a>
     <a href="https://incomplete-chain.badssl.com/" class="more orange">incomplete-chain</a>
+    <a href="https://very.badssl.com/" class="more dubious">very</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
     <a href="http://http.badssl.com/" class="more neutral">http</a>
     <div id="ua"></div>
