Added dh1024 and dh2048 sites, in response to the logjam mess. Addresses Issue 35.

--- a/domains/badssl.com/index.html
+++ b/domains/badssl.com/index.html
@@ -159,6 +159,8 @@
     <a href="https://subdomain.preloaded-hsts.badssl.com/" class="more bad">subdomain.<br>preloaded-hsts</a>
     <a href="https://dh480.badssl.com/" class="more bad">dh480</a>
     <a href="https://dh512.badssl.com/" class="more bad">dh512</a>
+    <a href="https://dh1024.badssl.com/" class="more dubious">dh1024</a>
+    <a href="https://dh2048.badssl.com/" class="more good">dh2048</a>
     <a href="https://incomplete-chain.badssl.com/" class="more orange">incomplete-chain</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
     <div id="ua"></div>
