Update wrapping and font sizes for the DH groups.

--- a/domains/dh-small-subgroup.badssl.com/index.html
+++ b/domains/dh-small-subgroup.badssl.com/index.html
@@ -26,7 +26,7 @@
       text-align: center;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
-      font-size: 9vw;
+      font-size: 10vw;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-    <h1>dh-small-subgroup.badssl.com</h1>
+    <h1>dh-small-<br>subgroup.<br>badssl.com</h1>
     <div class="footer">This site uses an ephemeral Diffie-Hellman key exchange over a 2048-bit group with a 31-bit subgroup.</div>
 </body>
 </html>
