Add rsa8192.badssl.com. Addresses #19.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -161,6 +161,7 @@
     <a href="https://dh512.badssl.com/" class="more bad">dh512</a>
     <a href="https://dh1024.badssl.com/" class="more dubious">dh1024</a>
     <a href="https://dh2048.badssl.com/" class="more good">dh2048</a>
+    <a href="https://rsa8192.badssl.com/" class="more dubious">rsa8192</a>
     <a href="https://dh-small-subgroup.badssl.com/" class="more bad">dh-small-subgroup</a>
     <a href="https://dh-composite.badssl.com/" class="more bad">dh-composite</a>
     <a href="https://incomplete-chain.badssl.com/" class="more orange">incomplete-chain</a>
