--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -164,6 +164,7 @@
     <a href="https://dh-small-subgroup.badssl.com/" class="more bad">dh-small-subgroup</a>
     <a href="https://dh-composite.badssl.com/" class="more bad">dh-composite</a>
     <a href="https://incomplete-chain.badssl.com/" class="more orange">incomplete-chain</a>
+    <a href="https://expired-ocsp.badssl.com/" class="more orange">expired-ocsp</a>
     <a href="https://very.badssl.com/" class="more dubious">very</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
     <a href="http://http.badssl.com/" class="more neutral">http</a>
