Add sha-2017.badssl.com to deployment script, now that we have a real cert. Closes #16.

--- a/domains/cert/sha1-2017.badssl.com/index.html
+++ b/domains/cert/sha1-2017.badssl.com/index.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" href="/icon-red.png"/>
   <style>
     html, body {
-      background: rgb(246, 207, 47);
+      background: red;
 
       margin: 0;
       padding: 0;
@@ -49,6 +49,6 @@
 </head>
 <body>
     <h1>sha1-2017.<br>badssl.com</h1>
-    <div class="footer">The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2017.</div>
+    <div class="footer">The certificate for this site is signed using SHA-1 and expires on Jan. 5, 2017.</div>
 </body>
 </html>
